--- a/app/src/main/res/navigation/navigation_host_home.xml
+++ b/app/src/main/res/navigation/navigation_host_home.xml
@@ -7,12 +7,15 @@
 
     <fragment
         android:id="@+id/listFragment"
-        android:name="com.example.pokemon_mvvm_roomdb.ListFragment"
+        android:name="com.example.pokemon_mvvm_roomdb.PokemonListFragment"
         android:label="fragment_list"
         tools:layout="@layout/fragment_list" >
         <action
             android:id="@+id/action_listFragment_self"
             app:destination="@id/listFragment" />
+        <action
+            android:id="@+id/action_listFragment_to_pokemonDetailsFragment"
+            app:destination="@id/pokemonDetailsFragment" />
     </fragment>
     <fragment
         android:id="@+id/pokedexFragment"
@@ -22,6 +25,15 @@
         <action
             android:id="@+id/action_pokedexFragment_self"
             app:destination="@id/pokedexFragment" />
+    </fragment>
+    <fragment
+        android:id="@+id/pokemonDetailsFragment"
+        android:name="com.example.pokemon_mvvm_roomdb.PokemonDetailsFragment"
+        android:label="fragment_pokemon_details"
+        tools:layout="@layout/fragment_pokemon_details" >
+        <action
+            android:id="@+id/action_pokemonDetailsFragment_to_listFragment"
+            app:destination="@id/listFragment" />
     </fragment>
 
 
