--- a/app/src/main/res/layout/fragment_pokemon_details.xml
+++ b/app/src/main/res/layout/fragment_pokemon_details.xml
@@ -10,6 +10,15 @@
         android:layout_height="wrap_content"
         android:orientation="vertical">
 
+        <include
+            android:id="@+id/btn_back"
+            layout="@layout/generic_back_button"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
         <!-- Sprites Section -->
         <LinearLayout
             android:layout_width="match_parent"
@@ -39,7 +48,6 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-
             android:background="@drawable/gradient_gray_background"
             android:orientation="vertical"
             android:padding="10dp">
@@ -53,14 +61,12 @@
                 android:textColor="@color/black"
                 android:textSize="20sp"
                 android:textStyle="bold" />
-
         </LinearLayout>
 
         <!-- Abilities and Types Section -->
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-
             android:background="@drawable/gradient_gray_background"
             android:orientation="horizontal"
             android:padding="10dp">
@@ -121,6 +127,17 @@
                     android:paddingTop="8dp" />
             </LinearLayout>
         </LinearLayout>
+
+        <Button
+            android:id="@+id/btn_add_to_favorites"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="16dp"
+            android:text="Add to Favorites"
+            android:backgroundTint="@color/ic_launcher_background"
+            android:textColor="@color/black"
+            android:textSize="16sp"
+            android:textStyle="bold" />
 
         <!-- Stats Section -->
         <androidx.cardview.widget.CardView
@@ -198,7 +215,6 @@
 
         </androidx.cardview.widget.CardView>
 
-
         <!-- Moves Section -->
         <androidx.cardview.widget.CardView
             android:layout_width="match_parent"
@@ -230,8 +246,6 @@
                     android:orientation="vertical" />
 
             </LinearLayout>
-
         </androidx.cardview.widget.CardView>
-
     </LinearLayout>
 </ScrollView>
