--- a/app/src/main/res/layout/pokemon_item.xml
+++ b/app/src/main/res/layout/pokemon_item.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="match_parent"
+    android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:elevation="5dp"
     app:cardCornerRadius="10dp"
@@ -10,39 +10,29 @@
     <LinearLayout
         android:id="@+id/llListBg"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@drawable/gradient_gray_background"
-        android:orientation="horizontal"
-        android:weightSum="2">
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        android:gravity="center">
 
         <ImageView
             android:id="@+id/pokemonImg"
             android:layout_width="wrap_content"
-            android:layout_height="80dp"
-            android:layout_gravity="center"
-            android:layout_marginRight="15dp"
-            android:layout_weight="1"
+            android:layout_height="150dp"
             android:scaleType="fitCenter"
-            android:src="@color/black"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            android:src="@color/white" />
 
         <TextView
             android:id="@+id/tvPokemonName"
             android:layout_width="wrap_content"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:layout_marginTop="5dp"
-            android:layout_marginEnd="5dp"
             android:layout_marginBottom="5dp"
-            android:layout_weight="1"
-            android:gravity="center|center_horizontal"
-            android:lines="2"
             android:text="Pokemon"
             android:textColor="@color/black"
             android:textSize="18sp"
-            android:textStyle="bold" />
-
-
+            android:textStyle="bold"
+            android:maxLines="2"
+            android:gravity="center" />
     </LinearLayout>
+
 </androidx.cardview.widget.CardView>
