--- a/app/src/main/res/layout/fragment_pokedex.xml
+++ b/app/src/main/res/layout/fragment_pokedex.xml
@@ -5,10 +5,9 @@
     android:layout_height="match_parent"
     tools:context=".UI.fragments.PokedexFragment">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="dex" />
 
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/rv_fav"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
 </FrameLayout>
