--- a/app/src/main/res/layout/pokemon_item.xml
+++ b/app/src/main/res/layout/pokemon_item.xml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="wrap_content"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:layout_margin="8dp"
     android:elevation="5dp"
     app:cardCornerRadius="10dp"
     app:cardUseCompatPadding="true">
@@ -12,27 +13,28 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
-        android:gravity="center">
+        android:gravity="center"
+        android:padding="16dp">
 
         <ImageView
             android:id="@+id/pokemonImg"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="150dp"
             android:scaleType="fitCenter"
-            android:src="@color/white" />
+            android:src="@drawable/ic_launcher_foreground" />
 
         <TextView
             android:id="@+id/tvPokemonName"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="5dp"
-            android:layout_marginBottom="5dp"
+            android:layout_marginTop="8dp"
             android:text="Pokemon"
             android:textColor="@color/black"
             android:textSize="18sp"
             android:textStyle="bold"
             android:maxLines="2"
-            android:gravity="center" />
+            android:gravity="center"
+            android:padding="4dp" />
     </LinearLayout>
 
 </androidx.cardview.widget.CardView>
