Add missing flow in deletion of favorites

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -24,6 +24,7 @@
         android:id="@+id/btmNav"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:background="#FFC107"
         android:visibility="visible"
         app:defaultNavHost="true"
         app:layout_constraintBottom_toBottomOf="parent"
