--- a/app/src/main/res/layout/fragment_pokedex.xml
+++ b/app/src/main/res/layout/fragment_pokedex.xml
@@ -13,6 +13,18 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
+
+    <TextView
+        android:id="@+id/txt_empty"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="EMPTY FAVORITES"
+        android:visibility="gone"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/rvFav" />
+
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rvFav"
         android:layout_width="0dp"
