--- a/app/src/main/res/layout/generic_back_button.xml
+++ b/app/src/main/res/layout/generic_back_button.xml
@@ -30,7 +30,7 @@
         android:ellipsize="end"
         android:maxLines="1"
         android:text=""
-        android:textColor="@android:color/black"
+        android:textColor="#FFC107"
         android:textSize="16sp" />
 
 </androidx.appcompat.widget.Toolbar>
