--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -2,7 +2,7 @@
     <!-- Base application theme. -->
     <style name="Base.Theme.Pokemonmvvmroomdb" parent="Theme.Material3.Light.NoActionBar">
         <!-- Customize your light theme here. -->
-        <item name="colorPrimary">#191f22</item>
+        <item name="colorPrimary">#FFC107</item>
     </style>
 
     <style name="Theme.Pokemonmvvmroomdb" parent="Base.Theme.Pokemonmvvmroomdb" />
